--- a/styles/output.css
+++ b/styles/output.css
@@ -653,6 +653,9 @@
   .justify-between {
     justify-content: space-between;
   }
+  .justify-center {
+    justify-content: center;
+  }
   .justify-end {
     justify-content: flex-end;
   }
